First fully working version

--- a/src/gui_config/sm_config.ui
+++ b/src/gui_config/sm_config.ui
@@ -15,26 +15,6 @@
    <string>Script Manager Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="2" colspan="2">
-    <widget class="SMConfigModelchooser" name="modelChooser"/>
-   </item>
-   <item row="0" column="4">
-    <widget class="QPushButton" name="importButton">
-     <property name="text">
-      <string>⎈ Import / Export Setting</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="5">
-    <widget class="QPushButton" name="cancelButton">
-     <property name="text">
-      <string>Cancel</string>
-     </property>
-     <property name="autoDefault">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="0">
     <widget class="QPushButton" name="helpButton">
      <property name="text">
@@ -45,10 +25,23 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="6">
+   <item row="2" column="7">
     <widget class="QPushButton" name="saveButton">
      <property name="text">
       <string>Save</string>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2" colspan="2">
+    <widget class="SMConfigModelchooser" name="modelChooser"/>
+   </item>
+   <item row="0" column="4">
+    <widget class="QPushButton" name="importButton">
+     <property name="text">
+      <string>⎈ Import / Export Setting</string>
      </property>
     </widget>
    </item>
@@ -62,7 +55,27 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="2" colspan="3">
+   <item row="2" column="8">
+    <widget class="QPushButton" name="wbButton">
+     <property name="text">
+      <string>Write To Templates</string>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="6">
+    <widget class="QPushButton" name="cancelButton">
+     <property name="text">
+      <string>Cancel</string>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2" colspan="4">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -75,7 +88,7 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="0" colspan="7">
+   <item row="1" column="0" colspan="9">
     <widget class="SMScriptTab" name="configWidget" native="true"/>
    </item>
   </layout>
