--- a/src/gui_config/sm_script_tab.ui
+++ b/src/gui_config/sm_script_tab.ui
@@ -14,7 +14,14 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="3">
+   <item row="4" column="4">
+    <widget class="QPushButton" name="downPushButton">
+     <property name="text">
+      <string>▼ Down</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="3">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -27,28 +34,28 @@
      </property>
     </spacer>
    </item>
-   <item row="2" column="4">
-    <widget class="QPushButton" name="downPushButton">
-     <property name="text">
-      <string>▼ Down</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
+   <item row="4" column="1">
     <widget class="QPushButton" name="addPushButton">
      <property name="text">
       <string>⊕ Add</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
+   <item row="4" column="2">
     <widget class="QPushButton" name="deletePushButton">
      <property name="text">
       <string>⌫ Delete</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="5">
+   <item row="4" column="0">
+    <widget class="QPushButton" name="importButton">
+     <property name="text">
+      <string>⎈ Import / Export</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="5">
     <widget class="QPushButton" name="upPushButton">
      <property name="text">
       <string>▲ Up</string>
@@ -56,13 +63,13 @@
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QPushButton" name="importButton">
+    <widget class="QCheckBox" name="enableCheckBox">
      <property name="text">
-      <string>⎈ Import / Export</string>
+      <string>Enable Script Insertion</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="6">
+   <item row="3" column="0" colspan="6">
     <widget class="QTableWidget" name="scriptsTable">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
