--- a/src/gui_config/am_script_tab.ui
+++ b/src/gui_config/am_script_tab.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SMScriptTab</class>
- <widget class="QWidget" name="SMScriptTab">
+ <class>AMScriptTab</class>
+ <widget class="QWidget" name="AMScriptTab">
   <property name="geometry">
    <rect>
     <x>0</x>
