--- a/src/gui_config/script_config.ui
+++ b/src/gui_config/script_config.ui
@@ -6,25 +6,58 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>834</width>
-    <height>564</height>
+    <width>917</width>
+    <height>607</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <item row="4" column="0">
+    <widget class="QPushButton" name="validateButton">
+     <property name="text">
+      <string>Validate Conditions</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="6">
+    <widget class="QPushButton" name="saveButton">
+     <property name="text">
+      <string>Save</string>
+     </property>
+     <property name="autoDefault">
+      <bool>true</bool>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="3" rowspan="2" colspan="4">
     <widget class="QGroupBox" name="statementsForInsertion">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>2</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Every iteration has a default style with the name &amp;quot;default&amp;quot;. If no other style is applied, and no rule is applicable, the &amp;quot;default&amp;quot; style will be used.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="title">
       <string>Code</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
       <item row="0" column="0" colspan="2">
-       <widget class="QPlainTextEdit" name="codeTextEdit"/>
+       <widget class="QPlainTextEdit" name="codeTextEdit">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -32,58 +65,59 @@
    <item row="1" column="0" colspan="3">
     <widget class="QGroupBox" name="scriptConditions">
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The input syntax of the iteration. This will be used to detect sets in the card content.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="title">
       <string>Insertion</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="2" column="1" colspan="3">
-       <widget class="QLabel" name="conditionsLabel">
+      <item row="0" column="2" colspan="2">
+       <widget class="QComboBox" name="positionComboBox">
+        <item>
+         <property name="text">
+          <string>External</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Head</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Body</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Into Template</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Conditions</string>
+         <string>Position:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1" colspan="3">
-       <widget class="QPlainTextEdit" name="conditionsTextEdit">
-        <property name="plainText">
-         <string>['&amp;',
- ['card', 'includes', 'FrontBack'],
- ['|', ['tag', 'endsWith', 'context'], ['tag', 'endsWith', 'xxx']]]</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" rowspan="2" colspan="3">
-       <widget class="QGroupBox" name="groupBox_2">
+      <item row="3" column="1" rowspan="2" colspan="3">
+       <widget class="QGroupBox" name="conditionsGroupBox">
         <property name="title">
-         <string>Position</string>
+         <string>Conditions:</string>
         </property>
         <property name="flat">
          <bool>true</bool>
         </property>
         <layout class="QGridLayout" name="gridLayout_5">
          <item row="0" column="0">
-          <widget class="QRadioButton" name="externalRadioButton">
-           <property name="text">
-            <string>External</string>
+          <widget class="QPlainTextEdit" name="conditionsTextEdit">
+           <property name="plainText">
+            <string/>
            </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QRadioButton" name="headRadioButton">
-           <property name="text">
-            <string>Head</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="2">
-          <widget class="QRadioButton" name="bodyRadioButton">
-           <property name="text">
-            <string>Body</string>
+           <property name="placeholderText">
+            <string>This field governs the insertion of the script into the template. It must contain valid JSON.</string>
            </property>
           </widget>
          </item>
@@ -93,11 +127,87 @@
      </layout>
     </widget>
    </item>
-   <item row="4" column="0">
-    <widget class="QPushButton" name="validateButton">
-     <property name="text">
-      <string>Validate Conditions</string>
+   <item row="0" column="0" colspan="3">
+    <widget class="QGroupBox" name="generalOptions">
+     <property name="toolTip">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
+     <property name="title">
+      <string>General</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="8" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Version:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="1" colspan="2">
+       <widget class="QLineEdit" name="versionLineEdit">
+        <property name="text">
+         <string>v0.1</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="nameLabel">
+        <property name="text">
+         <string>Name:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" colspan="2">
+       <widget class="QComboBox" name="typeComboBox">
+        <item>
+         <property name="text">
+          <string>JavaScript</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>CSS</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="9" column="0" colspan="3">
+       <widget class="QGroupBox" name="groupBox">
+        <property name="title">
+         <string>Description:</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPlainTextEdit" name="descriptionTextEdit">
+           <property name="placeholderText">
+            <string>Document your script here...</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="0" column="1" colspan="2">
+       <widget class="QLineEdit" name="nameLineEdit">
+        <property name="text">
+         <string>the name</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QCheckBox" name="enableScriptCheckBox">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Advanced feature. Check this if you want to treat the content of the &amp;quot;Open Delimiter&amp;quot;, &amp;quot;Close Delimiter&amp;quot;, and &amp;quot;Field separator&amp;quot; as regular expressions.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="text">
+         <string>Enabled</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="4" column="4">
@@ -116,19 +226,6 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="6">
-    <widget class="QPushButton" name="saveButton">
-     <property name="text">
-      <string>Save</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-     <property name="default">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="4" column="5">
     <widget class="QPushButton" name="cancelButton">
      <property name="text">
@@ -136,7 +233,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="2">
+   <item row="4" column="1" colspan="3">
     <widget class="QLabel" name="metaLabel">
      <property name="text">
       <string>This is an example meta label</string>
@@ -144,92 +241,6 @@
      <property name="wordWrap">
       <bool>true</bool>
      </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="3">
-    <widget class="QGroupBox" name="generalOptions">
-     <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The input syntax of the iteration. This will be used to detect sets in the card content.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="title">
-      <string>General</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="5" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Version</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0" colspan="6">
-       <widget class="QPlainTextEdit" name="descriptionTextEdit">
-        <property name="placeholderText">
-         <string>Description</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" colspan="5">
-       <widget class="QLineEdit" name="nameLineEdit">
-        <property name="text">
-         <string>the name</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1" colspan="5">
-       <widget class="QLineEdit" name="versionLineEdit">
-        <property name="text">
-         <string>v0.1</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="nameLabel">
-        <property name="text">
-         <string>Name</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0" colspan="6">
-       <widget class="QCheckBox" name="enableScriptCheckBox">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Advanced feature. Check this if you want to treat the content of the &amp;quot;Open Delimiter&amp;quot;, &amp;quot;Close Delimiter&amp;quot;, and &amp;quot;Field separator&amp;quot; as regular expressions.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="text">
-         <string>Enable this script</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" rowspan="2" colspan="6">
-       <widget class="QGroupBox" name="groupBox">
-        <property name="title">
-         <string>Type</string>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-        <layout class="QGridLayout" name="gridLayout_6">
-         <item row="0" column="1">
-          <widget class="QRadioButton" name="cssRadioButton">
-           <property name="text">
-            <string>CSS</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QRadioButton" name="jsRadioButton">
-           <property name="text">
-            <string>JS</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
   </layout>
