--- a/src/gui_config/script_tab.ui
+++ b/src/gui_config/script_tab.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>779</width>
-    <height>485</height>
+    <width>1255</width>
+    <height>537</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,11 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="8" column="0" colspan="6">
     <widget class="QTableWidget" name="scriptsTable">
+     <property name="font">
+      <font>
+       <family>Monaco</family>
+      </font>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
@@ -38,7 +43,7 @@
       <bool>true</bool>
      </property>
      <property name="gridStyle">
-      <enum>Qt::SolidLine</enum>
+      <enum>Qt::DashLine</enum>
      </property>
      <property name="sortingEnabled">
       <bool>false</bool>
@@ -51,6 +56,9 @@
      </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>200</number>
+     </attribute>
+     <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+      <bool>false</bool>
      </attribute>
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
@@ -65,6 +73,9 @@
       <bool>true</bool>
      </attribute>
      <attribute name="verticalHeaderShowSortIndicator" stdset="0">
+      <bool>false</bool>
+     </attribute>
+     <attribute name="verticalHeaderStretchLastSection">
       <bool>false</bool>
      </attribute>
      <row>
@@ -84,17 +95,17 @@
      </column>
      <column>
       <property name="text">
-       <string>Version</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
        <string>Enabled</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Meta</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Position</string>
       </property>
      </column>
      <column>
@@ -107,12 +118,12 @@
        <string>multChoice</string>
       </property>
      </item>
-     <item row="0" column="2">
+     <item row="0" column="1">
       <property name="text">
        <string>✓</string>
       </property>
      </item>
-     <item row="0" column="3">
+     <item row="0" column="2">
       <property name="text">
        <string>✗</string>
       </property>
@@ -127,14 +138,14 @@
        <string>multChoiceBack</string>
       </property>
      </item>
-     <item row="1" column="2">
+     <item row="1" column="1">
       <property name="text">
-       <string>✗</string>
+       <string>yes</string>
       </property>
      </item>
-     <item row="1" column="3">
+     <item row="1" column="2">
       <property name="text">
-       <string>✗</string>
+       <string>no</string>
       </property>
      </item>
      <item row="1" column="4">
@@ -144,65 +155,38 @@
      </item>
     </widget>
    </item>
-   <item row="9" column="1">
-    <widget class="QPushButton" name="addPushButton">
-     <property name="text">
-      <string>⊕ Add</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="5">
-    <widget class="QPushButton" name="upPushButton">
-     <property name="text">
-      <string>▲ Up</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="3">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="9" column="4">
-    <widget class="QPushButton" name="downPushButton">
-     <property name="text">
-      <string>▼ Down</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="2">
-    <widget class="QPushButton" name="deletePushButton">
-     <property name="text">
-      <string>⌫ Delete</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" rowspan="4" colspan="6">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+   <item row="0" column="0" colspan="6">
+    <layout class="QHBoxLayout" name="topBar">
+     <item>
+      <widget class="QPushButton" name="addPushButton">
+       <property name="text">
+        <string>⊕ Add</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="deletePushButton">
+       <property name="text">
+        <string>⌫ Delete</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QCheckBox" name="enableCheckBox">
        <property name="text">
-        <string>Enable Script Insertion</string>
+        <string>Enabled</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QCheckBox" name="insertStubCheckBox">
        <property name="text">
-        <string>Insert Stub Only</string>
+        <string> Stub Only</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_inHl">
+      <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -213,6 +197,20 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="downPushButton">
+       <property name="text">
+        <string>▼ Down</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="upPushButton">
+       <property name="text">
+        <string>▲ Up</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
