--- a/designer/config.ui
+++ b/designer/config.ui
@@ -7,15 +7,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1183</width>
-    <height>546</height>
+    <width>826</width>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Script Manager Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="8">
+   <item row="2" column="5">
     <widget class="QPushButton" name="cancelButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -31,23 +31,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QPushButton" name="helpButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Help</string>
-     </property>
-     <property name="autoDefault">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="7">
+   <item row="2" column="4">
     <widget class="QPushButton" name="saveButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -63,7 +47,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="6">
+   <item row="2" column="3">
     <widget class="QPushButton" name="wbButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -79,10 +63,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="9">
-    <widget class="ScriptTab" name="configWidget" native="true"/>
-   </item>
-   <item row="1" column="1" colspan="5">
+   <item row="2" column="1" colspan="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -94,6 +75,49 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="0" column="0" colspan="6">
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
+     <widget class="QWidget" name="html">
+      <attribute name="title">
+       <string>HTML Template</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="ScriptTab" name="configWidgetHtml" native="true"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="javascript">
+      <attribute name="title">
+       <string>JavaScript</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="ScriptTab" name="configWidget" native="true"/>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QPushButton" name="helpButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Help</string>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
