--- a/designer/config.ui
+++ b/designer/config.ui
@@ -87,7 +87,7 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="ScriptTab" name="configWidgetHtml" native="true"/>
+        <widget class="HTMLTab" name="configWidgetHtml" native="true"/>
        </item>
       </layout>
      </widget>
@@ -126,6 +126,12 @@
    <class>ScriptTab</class>
    <extends>QWidget</extends>
    <header>..script_tab</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>HTMLTab</class>
+   <extends>QWidget</extends>
+   <header>..html_tab</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
