--- a/designer/html_config.ui
+++ b/designer/html_config.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1212</width>
-    <height>534</height>
+    <height>665</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,71 +25,6 @@
      <property name="text">
       <string>Validate Conditions</string>
      </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="3">
-    <widget class="QGroupBox" name="scriptConditions">
-     <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="title">
-      <string>Insertion</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="2" colspan="2">
-       <widget class="QComboBox" name="positionComboBox">
-        <item>
-         <property name="text">
-          <string>As External Document</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Document Head</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Document Body</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Into Template</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Position:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1" rowspan="2" colspan="3">
-       <widget class="QGroupBox" name="conditionsGroupBox">
-        <property name="title">
-         <string>Conditions:</string>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-        <layout class="QGridLayout" name="gridLayout_5">
-         <item row="0" column="0">
-          <widget class="QPlainTextEdit" name="conditionsTextEdit">
-           <property name="plainText">
-            <string/>
-           </property>
-           <property name="placeholderText">
-            <string>This field governs the insertion of the script into the template. It must contain valid JSON.</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
    <item row="0" column="0" colspan="3">
@@ -120,20 +55,6 @@
         <property name="text">
          <string>Name:</string>
         </property>
-       </widget>
-      </item>
-      <item row="1" column="1" colspan="2">
-       <widget class="QComboBox" name="typeComboBox">
-        <item>
-         <property name="text">
-          <string>JavaScript</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>CSS</string>
-         </property>
-        </item>
        </widget>
       </item>
       <item row="9" column="0" colspan="3">
@@ -265,6 +186,63 @@
      <property name="flat">
       <bool>false</bool>
      </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
+    <widget class="QGroupBox" name="scriptConditions">
+     <property name="toolTip">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="title">
+      <string>Insertion</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="2">
+       <widget class="QLineEdit" name="labelEdit"/>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Label:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" colspan="3">
+       <widget class="QGroupBox" name="conditionsGroupBox">
+        <property name="title">
+         <string>Conditions:</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_5">
+         <item row="0" column="0">
+          <widget class="QPlainTextEdit" name="conditionsTextEdit">
+           <property name="plainText">
+            <string/>
+           </property>
+           <property name="placeholderText">
+            <string>This field governs the insertion of the script into the template. It must contain valid JSON.</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
