Add label for JS scripts

--- a/designer/script_config.ui
+++ b/designer/script_config.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1212</width>
-    <height>534</height>
+    <height>536</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,7 +36,29 @@
       <string>Insertion</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="2" colspan="2">
+      <item row="4" column="1" rowspan="2" colspan="3">
+       <widget class="QGroupBox" name="conditionsGroupBox">
+        <property name="title">
+         <string>Conditions:</string>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_5">
+         <item row="0" column="0">
+          <widget class="QPlainTextEdit" name="conditionsTextEdit">
+           <property name="plainText">
+            <string/>
+           </property>
+           <property name="placeholderText">
+            <string>This field governs the insertion of the script into the template. It must contain valid JSON.</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="1" column="2" colspan="2">
        <widget class="QComboBox" name="positionComboBox">
         <item>
          <property name="text">
@@ -60,34 +82,22 @@
         </item>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="label_2">
+      <item row="1" column="1">
+       <widget class="QLabel" name="positionLabel">
         <property name="text">
          <string>Position:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1" rowspan="2" colspan="3">
-       <widget class="QGroupBox" name="conditionsGroupBox">
-        <property name="title">
-         <string>Conditions:</string>
+      <item row="0" column="1">
+       <widget class="QLabel" name="labelLabel">
+        <property name="text">
+         <string>Label:</string>
         </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-        <layout class="QGridLayout" name="gridLayout_5">
-         <item row="0" column="0">
-          <widget class="QPlainTextEdit" name="conditionsTextEdit">
-           <property name="plainText">
-            <string/>
-           </property>
-           <property name="placeholderText">
-            <string>This field governs the insertion of the script into the template. It must contain valid JSON.</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
        </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QLineEdit" name="labelLineEdit"/>
       </item>
      </layout>
     </widget>
