Add support for ES modules

--- a/designer/script_config.ui
+++ b/designer/script_config.ui
@@ -141,6 +141,11 @@
         </item>
         <item>
          <property name="text">
+          <string>ES Module</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
           <string>CSS</string>
          </property>
         </item>
